# nonebot-plugin-today-waifu

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_today_waifu/: __init__.py  config.py  record.py  utils.py
